crates/solidity/testing/snapshots/bindings_output/errors/definitions/v2/generated/0.7.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or OpenBracket.
   ╭─[input.sol:1:7]
   │
 1 │ error TopLevelError(int x, int y);
   │       ─────────────┬─────────────  
   │                    ╰─────────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:4:24]
   │
 4 │     error ContractError(int x, int y);
   │                        ───────┬──────  
   │                               ╰──────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (2):
- Def: #1 ["Test" @ input.sol:3:10] (contract)
- Def: #2 ["ContractError" @ input.sol:4:11] (state var, type: unresolved)

------------------------------------------------------------------------

References (1):
- Ref: ["error" @ input.sol:4:5] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (1):
- ???: ["error" @ input.sol:1:1]

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ error TopLevelError(int x, int y);
   │ ──┬──  
   │   ╰──── ???
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 4 │     error ContractError(int x, int y);
   │     ──┬── ──────┬──────  
   │       ╰────────────────── unresolved
   │                 │        
   │                 ╰──────── name: 2
───╯
